# UnSAT-Rust

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO  build_klee.sh  build_mirscan.sh  operators.json  rules.csv  rules.json  studied_rules  x
.devcontainer/: Dockerfile  devcontainer.json
crates/: anon-vec-0.1.1.json  aragonite-0.1.0.json  arenavec-0.1.1.json  arrow2-0.18.0.json  hugepage-rs-0.1.0.json
crates/anon-vec-0.1.1/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  report.json
crates/aragonite-0.1.0/: Cargo.toml  Cargo.toml.orig  README.md  report.json
crates/arenavec-0.1.1/: .cargo_vcs_info.json  Cargo.toml  report.json
crates/arrow2-0.18.0/: report.json
crates/bitm-0.4.2/: .cargo_vcs_info.json  Cargo.toml
crates/blade-0.2.0/: .cargo_vcs_info.json  Cargo.toml
crates/cat_engine-1.0.0-alpha7/: .cargo_vcs_info.json  Cargo.toml
crates/cgc-0.4.0/: Cargo.toml
crates/cutools-0.7.4/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs
crates/cyberex-0.3.12/: .gitignore  .rustfmt.toml  Cargo.toml  Cargo.toml.orig  LICENSE  readme.md
crates/everscale-network-0.5.5/: .cargo_vcs_info.json  Cargo.toml
crates/falcon_capstone-0.5.2/: .cargo_vcs_info.json  Cargo.toml
crates/fast-able-1.11.17/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  README.md
crates/fast-floats-0.2.0/: .cargo_vcs_info.json  Cargo.toml
crates/scanner-0.1.0/: Cargo.toml
crates/shaman-0.1.0/: .gitignore  Cargo.toml  README.md
crates/shaman-0.1.0/src/: cryptoutil.rs  lib.rs  sha1.rs  sha2.rs
eval/: anon-vec-0.1.1.json  hugepage-rs-0.1.0.json
human/: hugepage-rs-0.1.0.json
meta/: anon-vec-0.1.1.json
testdata/: rust_pointer_add_in_bounds.bad.json  rust_pointer_add_in_bounds.good1.json  rust_pointer_add_in_bounds.good2.json  rust_pointer_add_no_overflow.bad.json  rust_pointer_add_no_overflow.good1.json  rust_pointer_add_no_overflow.good2.json  rust_pointer_add_non_null_source.bad.json  rust_pointer_add_non_null_source.good1.json  rust_pointer_add_non_null_source.good2.json  rust_pointer_add_same_allocation.bad.json  rust_pointer_add_same_allocation.good1.json  rust_pointer_add_same_allocation.good2.json  rust_pointer_add_same_allocator.bad.json  rust_pointer_add_same_allocator.good1.json  rust_pointer_add_same_allocator.good2.json
tools/: .gitignore
tools/autoinj/: Cargo.toml
tools/autoinj/src/: main.rs
tools/klee-ext-bind/: Cargo.toml
tools/klee-ext-bind/src/: lib.rs  stubs.rs
tools/mirscan/: Cargo.toml
tools/mirscan/src/: main.rs  report.rs
tools/x/: Cargo.toml  pyproject.toml
tools/x/src/: main.rs
tools/x/src/cli/: cli.py
tools/x/src/cli/cmd/: cancel_batch_task.py  compare.py  eval.py  generate.py  get_batch_task.py  llvmir.py  merge_rules.py  process.py  submit_batch_task.py  summary.py  sync.py  verify.py  view.py
tools/x/src/dsl/: __init__.py  ast.py  errors.py  parser.py  simplifier.py  test_parser.py  test_simplifier.py
tools/x/src/llm/: __init__.py  interface.py  openai_llm.py
tools/x/src/task1/: README.md  prompts.py
tools/x/src/task2/: README.md  prompts.py
tools/x/src/task3/: README.md  prompts.py
tools/x/src/verirule/: dsl.py  equivalence.py  errors.py  rule.schema.json  schema.py  utils.py
(+488 files in other folders)
