[package]
name = "shaman"
version = "0.1.0"
authors = ["Zach Dziura <zcdziura@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zcdziura/shaman/"
description = "A pure-Rust, cross-platform implementation of various common hashing algorithms."
keywords = [ "Hashing", "MD5", "Sha1", "Sha2", "Hash" ]
readme = "README.md"

[dependencies]
rand = "*"
rustc-serialize = "*"