[package]
name = "autoinj"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "printing", "visit", "visit-mut"] }
toml_edit = "0.22"
walkdir = "2"
prettyplease = "0.2"
