[package]
name = "klee-ext-bind"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrapper around the KLEE klee_ext_bind special function"

[features]
# Provide no-op stub implementations of the KLEE extern symbols so that
# normal `cargo test` / `cargo build` invocations link successfully.
stub = []
