[package]
name = "raudit"
version = "0.1.0"
edition = "2021"
authors = ["Shihao Xia <charlesxsh@hotmail.com>"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
fs_extra = "1.3.0"

[package.metadata.rust-analyzer]
rustc_private = true
