[package]
name = "raudit"
version = "0.1.0"
edition = "2024"
authors = ["Shihao Xia <charlesxsh@hotmail.com>"]

[dependencies]
tokio = "1"
anyhow = "1"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
fs_extra = "1.3.0"
walkdir = "2"

[package.metadata.rust-analyzer]
rustc_private = true
