[project]
name = "x"
version = "0.1.0"
description = "Validate SMT rule JSON files and compare buggy violation equivalence using Z3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.22.0",
    "z3-solver>=4.13.0",
    "openai>=2.33.0",
    "lark>=1.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
crates = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.scripts]
x = "x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/x"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"